--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta name=description content>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=alternate type=application/rss+xml href=http://example.org/index.xml title="My New Hugo Site">
+<link rel=alternate type=application/rss+xml href=https://uragiristereo.github.ioindex.xml title="My New Hugo Site">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="My New Hugo Site">
 <meta name=twitter:description content>
-<link rel=stylesheet href=http://example.org/fontawesome/css/all.min.css>
+<link rel=stylesheet href=https://uragiristereo.github.iofontawesome/css/all.min.css>
 <link crossorigin=anonymous href=/css/styles.min.css integrity rel="preload stylesheet" as=style>
 <link id=dark-mode-theme crossorigin=anonymous href=/css/dark.min.css integrity rel="preload stylesheet" as=style>
 <script>var darkTheme=document.getElementById('dark-mode-theme'),storedTheme=localStorage.getItem('dark-mode-storage');storedTheme==='dark'?darkTheme.disabled=!1:storedTheme==='light'&&(darkTheme.disabled=!0)</script>
@@ -43,11 +43,11 @@ My New Hugo Site
 </div>
 <div class=container>
 <p class="credits copyright">
-<a href=http://example.org/about></a>
+<a href=https://uragiristereo.github.ioabout></a>
 &nbsp;&copy;
 0001
 &nbsp;/&nbsp;
-<a href=http://example.org/>My New Hugo Site</a>
+<a href=https://uragiristereo.github.io>My New Hugo Site</a>
 &nbsp;&ndash;&nbsp;
 <em class="fas fa-moon" id=dark-mode-toggle></em>
 </p>
