--- a/index.html
+++ b/index.html
@@ -1,62 +1,53 @@
 <!doctype html><html lang=en-us>
 <head>
+<meta name=generator content="Hugo 0.91.2">
 <meta charset=utf-8>
-<title>My New Hugo Site</title>
-<meta name=description content>
-<meta http-equiv=x-ua-compatible content="IE=edge">
+<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=alternate type=application/rss+xml href=https://uragiristereo.github.ioindex.xml title="My New Hugo Site">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="My New Hugo Site">
-<meta name=twitter:description content>
-<link rel=stylesheet href=https://uragiristereo.github.iofontawesome/css/all.min.css>
-<link crossorigin=anonymous href=/css/styles.min.css integrity rel="preload stylesheet" as=style>
-<link id=dark-mode-theme crossorigin=anonymous href=/css/dark.min.css integrity rel="preload stylesheet" as=style>
-<script>var darkTheme=document.getElementById('dark-mode-theme'),storedTheme=localStorage.getItem('dark-mode-storage');storedTheme==='dark'?darkTheme.disabled=!1:storedTheme==='light'&&(darkTheme.disabled=!0)</script>
-<script defer crossorigin=anonymous src=/js/theme.js integrity></script>
-<script defer crossorigin=anonymous src=/js/instantpage.min.js integrity></script><meta name=generator content="Hugo 0.91.2">
+<meta name=format-detection content="telephone=no">
+<title>My New Hugo Site</title>
+<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
+<link rel=manifest href=/manifest.json>
+<link rel=mask-icon href=/safari-pinned-tab.svg color=#ff3db4>
+<meta name=theme-color content="#ffffff">
+<link rel=stylesheet href=https://uragiristereo.github.io/css/main.min.e34415025514319010e741089e6920454053855755ba465f66943ad102d2cb08.css>
+<link rel=alternate type=application/rss+xml href=https://uragiristereo.github.io/index.xml title="My New Hugo Site">
 </head>
 <body>
+<nav>
 <header>
-<nav class=navbar>
-<div class=nav>
-<ul class=nav-links>
-</ul>
-</div>
-</nav>
-<div class=intro-header>
-<div class=container>
-<div class=page-heading>
-<h1>
-My New Hugo Site
-</h1>
-</div>
-</div>
+<div class=site-title>
+<a href=/>My New Hugo Site</a>
 </div>
 </header>
-<div class=container role=main>
-<div class=posts-list>
+<div class=nav-menu>
+<a class="color-link nav-link" href=https://uragiristereo.github.io/index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a>
 </div>
-</div>
-<footer>
+<footer class=footer>
 <div class=social-icons>
 </div>
-<div class=container>
-<p class="credits copyright">
-<a href=https://uragiristereo.github.ioabout></a>
-&nbsp;&copy;
-0001
-&nbsp;/&nbsp;
-<a href=https://uragiristereo.github.io>My New Hugo Site</a>
-&nbsp;&ndash;&nbsp;
-<em class="fas fa-moon" id=dark-mode-toggle></em>
-</p>
-<p class="credits theme-by">
-Powered By <a href=https://gohugo.io>Hugo</a>&nbsp;
-Theme
-<a href=https://github.com/matsuyoshi30/harbor>Harbor</a>
-</p>
+<p><a href=https://github.com/kimcc/hugo-theme-noteworthy target=_blank rel=noopener>Noteworthy theme</a></p>
+<p><a href=https://gohugo.io target=_blank rel=noopener>Built with Hugo</a></p>
+<script src=https://uragiristereo.github.io/js/main.min.c1aee25a817e9beb1f9c4afd9d62311227a7f5e46720e404dc1dda97281f47f2.js integrity="sha256-wa7iWoF+m+sfnEr9nWIxEien9eRnIOQE3B3alygfR/I=" crossorigin=anonymous></script>
+</footer>
+</nav>
+<div id=content class=content-container>
+<div class=article-content>
 </div>
+<div class=paginator>
+</div>
+</div>
+<footer class=footer-mobile>
+<div class=social-icons>
+</div>
+<div class=footer-mobile-links>
+<p><a href=https://github.com/kimcc/hugo-theme-noteworthy target=_blank rel=noopener>Noteworthy theme</a></p>
+<span class=divider-bar>|</span>
+<p><a href=https://gohugo.io target=_blank rel=noopener>Built with Hugo</a></p>
+</div>
+<script src=https://uragiristereo.github.io/js/main.min.c1aee25a817e9beb1f9c4afd9d62311227a7f5e46720e404dc1dda97281f47f2.js integrity="sha256-wa7iWoF+m+sfnEr9nWIxEien9eRnIOQE3B3alygfR/I=" crossorigin=anonymous></script>
 </footer>
 </body>
 </html>
