deploy: 32296c0fa50615489d0b6bf883a346fc8ba06dd9

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 </nav>
 <div id=content class=content-container>
 <div class=article-content>
+<article>
+<h2>
+<a href=https://uragiristereo.github.io/posts/first/>
+First
+</a>
+</h2>
+<div>
+<p>halo &lt;uragiristereo.github.io> &lt;shinkiro467.me></p>
+</div>
+<div class=post-footer>
+<time>March 8, 2022</time>
+</div>
+</article>
 </div>
 <div class=paginator>
 </div>
